# Plugin/Swagger/components/article.json
@@ -588,6 +588,51 @@
             }
         }
     },
+    "getDescription": {
+        "tags": [
+            "article"
+        ],
+        "summary": "Get description",
+        "description": "Get description of article by slug.",
+        "operationId": "getDescription",
+        "security": [
+            {
+                "bearerAuth": []
+            }
+        ],
+        "parameters": [
+            {
+                "name": "articleSlug",
+                "in": "path",
+                "description": "slug of article",
+                "required": true,
+                "schema": {
+                    "type": "string"
+                }
+            }
+        ],
+        "responses": {
+            "200": {
+                "description": "successful operation",
+                "content": {
+                    "application/xml": {
+                        "schema": {
+                            "$ref": "../schemas/article.json#/Article"
+                        }
+                    },
+                    "application/json": {
+                        "schema": {
+                            "$ref": "../schemas/article.json#/Article"
+                        }
+                    }
+                }
+            },
+            "404": {
+                "description": "Article not found",
+                "content": {}
+            }
+        }
+    },
     "paginationWithUser": {
         "tags": [
             "article"
